css/stylesheet.css
/* 
------------------------------------

        Table of Contents

------------------------------------

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*********** 1.0 GLOBAL ************
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

1.1 body,html
1.2 nav
1.3 section
1.4 a (anchor tags)
1.5 h3(::before & ::after)
1.6 img(logo)



~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*********** 2.0 CLASSES ***********
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

2.1 .parallax1,.parallax2,.parallax3
2.2 .heading
2.3 .two-col (Columns)
2.4 .vibepost (section)
2.5 .mylinks(navbar links)
2.6 .logo (top-gif-logo "KITH LAMAR")
2.7 vibe (vibepost font)
2.8 .grid
2.9 .card .card-image .card-text 
.card-link

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
******** 3.0 MEDIA QUERIES *********
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3.1.0 @media (max-width: 768px)
  3.1.1 .logo
  3.1.2 .heading
  3.1.3 .mylinks

------------------------------------

        Table of Contents

------------------------------------

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*********** 1.0 GLOBAL ************
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

------------------------------------
1.0 body,html (Global)
------------------------------------ 
*/

body,
html {
  font-size: 16px;
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: 0px;
  overflow-x: hidden;
  font-family: "Cousine", monospace;
  line-height: 180%;
  columns: #666666;
  text-align: center;
  font-weight: bolder;
  color: black;
}

/* 
------------------------------------
1.2 Nav
------------------------------------ 
*/
nav {
  margin-top: 0;
  background-color: rgb(0, 0, 0);
  position: fixed;
  z-index: 1;
  list-style: none;
  line-height: 0;
  width: 100%;
}

ul {
  display: inline-block;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

nav ul li {
  margin: 0;
  padding: 0;
}

nav a {
  color: #fff;
  padding: 5px;
}
nav a:hover {
  color: black;
  background-color: #fff;
  padding: 5px;
  border-radius: 5px;
}

/* 
------------------------------------
1.3 section
------------------------------------ 
*/

section {
  overflow: auto;
  padding: 50px 80px;
}

/* 
------------------------------------
1.4 a (anchor tags)
------------------------------------ 
*/

a {
  color: #000;
  text-decoration: none;
}

a:hover {
  color: darkorange;
}

/* 
------------------------------------
1.5 h3(::before & ::after)
------------------------------------ 
*/

h3 {
  line-height: 40px;
}
h3::before {
  content: open-quote;
  font-size: 40px;
  font-family: Arial, Helvetica, sans-serif;
}

h3::after {
  content: close-quote;
  font-size: 40px;
  font-family: Arial, Helvetica, sans-serif;
}

/* 
------------------------------------
1.6 img(logo)
------------------------------------ 
*/
img {
  width: 300px;
}

/* 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*********** 2.0 CLASSES ***********
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

------------------------------------
2.1 Parallax's 
{
.parallax1,
.parallax2,
.parallax3
}
------------------------------------ 
*/

.parallax1 {
  background: url("/img/img1.jpg");
  min-height: 100%;
}

.parallax2 {
  background: url("/img/img2.jpg");
  min-height: 60%;
}

.parallax3 {
  background: url("/img/img3.jpg");
  min-height: 100%;
}

.parallax1,
.parallax2,
.parallax3 {
  position: relative;
  opacity: 5;
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

/* 
------------------------------------
2.2 .heading (VIBE Post)
------------------------------------ 
*/

.heading {
  position: absolute;
  top: 45%;
  width: 100%;
  font-size: 200%;
  text-shadow: 0 0 1000px rgb(0, 0, 0);
  font-family: Arial, Helvetica, sans-serif;
}

.heading a {
  color: #000;
  text-decoration: none;
}
.heading a:hover {
  text-shadow: 0 0 1000px rgb(255, 255, 255);
}

/* 
------------------------------------
2.3 .two-col (Columns)
------------------------------------ 
*/

.two-col {
  float: left;
  width: 42%;
  padding: 0 4%;
  text-align: left;
}

/* 
------------------------------------
2.4 .vibepost (section)
------------------------------------ 
*/

.vibepost {
  overflow: auto;
  padding: 50px 80px;
  background-color: #fff;
  color: rgb(53, 53, 53);
}

/* 
------------------------------------
2.5 .mylinks(navbar links)
------------------------------------ 
*/

.mylinks {
  display: inline-block;
  font-weight: bolder;
  padding: 15px;
  font-size: 11px;
}

/* 
------------------------------------
2.6 .logo (top-gif-logo "KITH LAMAR")
------------------------------------ 
*/

.logo {
  position: sticky;
  top: 40%;
  width: 100%;
  height: auto;
}

/* 
------------------------------------
2.7 vibe (vibepost font)
------------------------------------ 
*/

.vibe {
  font-family: "Days One", sans-serif;
  font-weight: bolder;
}

/* 
------------------------------------
2.8 .grid
------------------------------------ 
*/

.grid {
  padding: 2em 1em 1em;
  margin: 0;
  justify-content: space-around;
}

/* 
------------------------------------
2.9 .card .card-image .card-text 
.card-link
------------------------------------ 
*/
.card .card-image .card-text {
  position: relative;
}

.card {
  background: rgba(0, 0, 0, lightgrey);
  border-radius: 10px;
  margin: 0;
  padding: 0;
  height: auto;
  box-shadow: 0 4px 8px 0 black;
}

.card-image {
  height: 150px;
  width: 100%;
  object-fit: contain;
  border-top-right-radius: 10px;
  border-top-left-radius: 10px;
  background: white;
}

.card-text {
  font-weight: bolder;
  padding: 1.5em;
  padding-top: 0;
}

.card-link {
  margin: 0;
  padding-bottom: 0;
  text-decoration-line: underline;
}

.card-link h3 {
  margin-top: 0;
}
/* 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
******** 3.0 MEDIA QUERIES *********
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 

/* 
------------------------------------
3.1.0 @media (min-width: 600px)
------------------------------------ 
*/

@media (min-width: 768px) {
  .logo {
    block-size: 60px;
  }
  .heading {
    font-size: 350%;
  }

  .mylinks {
    font-weight: bolder;
    padding: 15px;
    font-size: 20px;
  }
  .grid {
    display: flex;
  }

  .card {
    width: 48%;
    border-radius: 10px;
    height: auto;
  }

  .card-image {
    min-height: 5px;
    width: 100%;
    object-fit: contain;
    border-top-right-radius: 10px;
    border-top-left-radius: 10px;
    background: white;
  }

  .card-text {
    font-weight: bolder;
    padding: 1.5em;
    padding-top: 0;
  }
}

